<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_news"
            android:icon="@drawable/icon_create"
            android:title="@string/navigation_title_create_news" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/navigation_title_about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/icon_contact"
            android:title="@string/navigation_title_contact" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/navigation_title_logout" />
    </group>
</menu>
