<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background_about"
    android:layout_height="match_parent">
    <TextView
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title_about"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/title_about"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:textSize="16sp"
        android:padding="5dp"
        android:lineSpacingExtra="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/title_about"
        android:text="@string/content_about"
        android:id="@+id/content_about"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:layout_below="@+id/content_about"
        android:text="@string/author_about"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:paddingRight="20dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        android:textStyle="italic"/>
</RelativeLayout>